tests/lean/770.lean.expected.out
770.lean:1:25-3:40: error: invalid 'do' notation, expected type is not a monad application
  Nat
